# Bricoia

./: .env.example  .env.template  .gitignore  CLAUDE.md  gunicorn.conf.py  manage.py  pyproject.toml  run.sh
.claude/agents/: task-planner.md
.claude/commands/: feature.md  migrate.md
.claude/skills/django-expert/: .skillfish.json
.claude/skills/gemini-api-dev/: SKILL.md
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/ai_assistant/: apps.py  exceptions.py  services.py  urls.py  views.py
apps/designs/: admin.py  apps.py  exceptions.py  forms.py  models.py  services.py  urls.py  views.py
apps/designs/migrations/: 0001_initial.py
apps/projects/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_project_status.py
apps/tasks/: admin.py  forms.py  models.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_step_title.py  0003_comment.py  (+5 more)
config/: urls.py
config/settings/: base.py  development.py  production.py
specs/: PRD.md  ai_integration.md  database_schema.md  technical_architecture.md  ui_flows.md
static/css/: main.css
templates/: base.html
templates/accounts/: login.html  register.html
templates/designs/: design_delete_confirm.html  design_detail.html  design_list.html  design_new.html
templates/partials/: messages.html
templates/projects/: project_create.html  project_detail.html  project_invite.html  project_list.html
templates/tasks/: task_delete_confirm.html  task_detail.html  task_form.html
(+30 files in other folders)
